Fix navbar positioning on mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -54,6 +54,7 @@ div.menu-btn{
   font-weight:bold;
   cursor:pointer;
 }
+div.menu
 .navbar-nav /*.menu-btn*/{
   display:block;
   float: right;
@@ -111,7 +112,11 @@ nav.navbar.withsidebar {
     display: none !important;
   }
 }
-
+@media screen and (min-width: 768px) {
+  .navbar-nav {
+    margin-top: +7px;
+  }
+}
 div.header{
   background-color: #b8e0eb;
   z-index:0;
